--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 python:
+#  - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
@@ -11,4 +12,4 @@ install:
 
 script:
   - "python setup.py test"
-#  - "pytest --doctest-modules"
+  - "pytest"
